--- a/src/app/reports/reports.component.scss
+++ b/src/app/reports/reports.component.scss
@@ -3,12 +3,12 @@
   margin-left: 60px;
   margin-bottom: 0;
   margin-top: 60px;
-  font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+  //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
 }
 
 .breadcrumb-item a {
   color: #66c;
-  font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+  //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
   text-decoration: none !important;
 }
 
@@ -76,7 +76,7 @@
           padding: 10px;
           background: rgba(241,241,241,1);
           border-radius: 4px;
-          font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+          //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
           font-size: 16px;
         }
       }
@@ -95,7 +95,7 @@
         font-weight: bold;
         font-size: 14px;
         text-transform: uppercase;
-        font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+        //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
       }
     }
   }
@@ -103,7 +103,7 @@
 
 .reports {
   text-align: center;
-  font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+  //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
   font-size: 36px;
   border-bottom: 1px #c2c4cd solid;
   margin-left: 90px;
@@ -133,7 +133,7 @@
     font-size: 16px;
     font-weight: bold;
     color: rgb(0, 0, 0);
-    font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+    //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
     margin: 0;
   }
 
@@ -185,7 +185,7 @@ hr {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+  //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
   font-size: 14px;
   // height: 45px;
   svg {
@@ -200,14 +200,14 @@ hr {
   background-color: #f7f7f7;
 
   h3 {
-    font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+    //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
     font-size: 13px;
     margin: 0px;
     padding-bottom: 2px;
   }
 
   p {
-    font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+    //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
     font-size: 8px;
     margin: 0px;
   }
@@ -224,7 +224,7 @@ hr {
     padding: 8px 12px;
     border: 1px solid #ccc;
     border-radius: 6px;
-    font-family: Avenir-Book, Helvetica, Arial, sans-serif;
+    //font-family: Avenir-Book, Helvetica, Arial, sans-serif;
     font-size: 11px;
     color: #333;
     background-color: white;
