--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -447,19 +447,21 @@ select {
   
  //for table//
 
-  .table-container {
+  .table-container{
     width: 50px;
     margin-left: 50px;
     background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
 }
 
 .custom-request-table {
     margin-right: 20px;
     width:100%;
     border-collapse: separate;
+    overflow: hidden;
+    border-radius: 12px;
+    border: 1px solid #bbb;
     border-spacing: 0;
 }
 
